--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>net.axel</groupId>
     <artifactId>CCH</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>22</maven.compiler.source>
@@ -29,7 +30,7 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- PostgreSQL Driver -->
+        <!-- PostgresSQL Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
